change functional tests